# tcube-pi

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  Justfile  LICENSE  README.md  VISION.md  clippy.toml  compose.yaml  tcube_admin_settings.html
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
admin-ui/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
admin-ui/src/: App.svelte  api.ts  audio-settings-controller.ts  audio.ts  button-config-controller.ts  button-mode.ts  focus-routine-controller.ts  generated-speech-health.ts  main.ts  recording-controller.ts  styles.css  types.ts  view-utils.ts
admin-ui/src/components/: AudioContentRow.svelte  ButtonConfigPanel.svelte  ButtonFaceCard.svelte  ContentAddTabs.svelte  ContentDraftQueue.svelte  ContentList.svelte  CubeLogo.svelte  NeoCard.svelte  SoundboxCatalog.svelte  StatusChip.svelte  TerminalNotice.svelte  TopBanner.svelte  TopBar.svelte
admin-ui/src/views/: AuthView.svelte  ButtonConfigView.svelte  DashboardView.svelte  InventoryView.svelte  SettingsView.svelte
content/: content.json
deploy/mac-hermes/: README.md
deploy/pi-admin-caddy/: Caddyfile  README.md  tcube-mdns-alias  tcube-mdns-alias.service  tcube-pi-admin.env  tcube-pi-admin.service  tcube-update-run  tcube-update.env  tcube-update.path  tcube-update.service  test-tcube-update-run
deploy/pi-release/: README.md  install-latest  install-on-pi  prepare-release  test-install-on-pi-wifi
deploy/pi-runtime/: tcube-pi.env  tcube-pi.service
deploy/pi-zero-button-smoke/: README.md  install-on-pi.sh  tcube-button-smoke  tcube-button-smoke.env  tcube-button-smoke.service
docs/: tasks.md
docs/developer/: FEATURES.md  README.md  architecture-guide.md  assembly-instructions.md  authentication-guide.md  branding-guide.md  current-state.md  orchestration-blueprint.md  pi-package-list.md  rust-guide.md  testing-guide.md
docs/hardware/: breadboard-starter-wiring.md  hardware-assembly.md  inventory.md  pi-os-lite-install.md
src/: config.rs  device_api.rs  device_sync.rs  error.rs  lib.rs  main.rs
src/db/: measurements.rs  mod.rs  runtime.rs
src/events/: types.rs
src/hardware/: button.rs  gpio.rs  mod.rs  soundbox.rs
src/metrics/: latency.rs
src/server/: handler.rs  media.rs  mod.rs  pages.rs  speech.rs  tests.rs
(+39 files in other folders)
